- Fixed bug #41904 (proc_open with empty env array)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@241426 c90b9560-bf6c-de11-be94-00142212c4b1